# project34_gui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  out.pem
headers/: api.hpp  baseview.hpp  biljetscreen.hpp  checkoutscreen.hpp  fastcheckoutscreen.hpp  homescreen.hpp  loginscreen.hpp  receiptscreen.hpp  routing.hpp  saldoscreen.hpp  serial.hpp  slowcheckoutscreen.hpp  successscreen.hpp  usermodel.hpp  window.hpp
src/: api.cpp  checkoutscreen.cpp  homescreen.cpp  loginscreen.cpp  main.cpp  routing.cpp  saldoscreen.cpp  serial.cpp  usermodel.cpp  window.cpp
src/screen/: baseview.cpp  biljetscreen.cpp  checkoutscreen.cpp  fastcheckoutscreen.cpp  homescreen.cpp  loginscreen.cpp  receiptscreen.cpp  saldoscreen.cpp  slowcheckoutscreen.cpp  successscreen.cpp
